# trustlens

./: AI_INTEGRATION_FRONTEND.md  CONTRACT_INTEGRATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEVELOPMENT.md  Dockerfile.deploy  HACKATHON_DEMO_GUIDE.md  README.md  REAL_DEPLOYMENT_GUIDE.md  SMART_CONTRACT_DEPLOYMENT.md  aeproject.yaml  deploy.js  escrhow.aes  integrate-ai-service.js  integration-script.js  package.json
ai-verification-service/: .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
contracts/: TrustLensEscrow.aes
cross-chain-sync-service/: Dockerfile  README.md  docker-compose.yml  env.example  package.json  tsconfig.json
deployment/: TrustLensEscrow.aes  account.json  account.json.example  deploy-browser.js  deploy-cli.js  deploy-mock.js  deploy-simple.js  deploy-web.js  deploy.js  deployment-helper.html  deployment-info-template.json  deployment-info.json  generate-wallet.js  get-testnet-tokens.js  test-contract-mock.js  test-contract.js  troubleshoot-signature.js  update-config.js  verify-contract.js
frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  (+2 more)
solana-nft-receipt/: Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  package.json  tsconfig.json
solana-nft-receipt/examples/: ai-integration.js
solana-nft-receipt/programs/trustlens-nft-receipt/src/: lib.rs
solana-nft-receipt/scripts/: deploy.ts  setup-localnet.sh
solana-nft-receipt/ts/client/: test.ts  trustlens-client.ts  tsconfig.json
(+69 files in other folders)
