
[package]
name = "trustlens-nft-receipt"
version = "0.1.0"
description = "Solana NFT Receipt for TrustLens Escrow Deals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustlens_nft_receipt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "3.2.0"
